samples/_failures_safe/1761213525_9da0cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59b2767b.c: In function ‘main’:
./samples/SAFE/__tmp_59b2767b.c:143:5: error: expected declaration or statement at end of input
  143 |     }
      |     ^
